# Project_Aura

./: .gitignore  CHANGELOG.md  INICIAR.sh  INICIAR_TUDO.sh  INSTALAR_E_RODAR.ps1  Notification card.py  README.md  SETUP_COMPLETO.ps1  SETUP_TURSO.md  app.py  bulletin_board.py  bypass_proxy.py  calculations.py  database.py  download  isopor_parceiro.db  manual_pdf.py  notification_card.py  notifications.py  regenerate_receipts.py  requirements.txt  serve.sh  tunnel.py  utils.py
.streamlit/: config.toml
ProjectAuraOS/fusion/: .gitignore  ARCHITECTURE.md  AUTONOMY_MODE_CHANGELOG.md  PERSONALITY.md  README.md  SECURITY.md  agents.yaml  memory.md  pyproject.toml  requirements.txt  test_administrator_mode.py
ProjectAuraOS/fusion/aura_fusion/: __init__.py  cli.py  config.py  fusiond.py  llm_provider.py  models.py
ProjectAuraOS/fusion/aura_fusion/comms/: __init__.py  voice_api.py
ProjectAuraOS/fusion/aura_fusion/fusiond/: __main__.py  daemon.py
ProjectAuraOS/fusion/aura_fusion/local/: __init__.py  llm.py
ProjectAuraOS/fusion/config/: config.example.yaml
ProjectAuraOS/fusion/docs/: README.md
ProjectAuraOS/fusion/local_self/: ADMINISTRATOR_QUICK_START.md  FUSION_LOCAL_SYSTEM_PROMPT.txt  LOCAL_PRESENCE_SEED.md  run_local_fusion.sh
ProjectAuraOS/fusion/scripts/: Sofia.desktop  aura-fusion.service  automate-qwen-switch.sh  import-grok-chat.py  install-service.sh  launch-chat.sh  run-local.sh  sacred-protect.sh  setup-aura-portable.sh  setup-local.sh  sofia-listen-persistent.sh  sofia-listen.service  test-llm-connection.py  update-local-prompt.sh
(+90 files in other folders)
