[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-fusion"
version = "0.1.0"
description = "Project AuraOS Fusion Layer — Sofia co-habiting the OS"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary - Personal Use"}
authors = [
  {name = "med4to + Grok Build"}
]

dependencies = [
  "pydantic>=2.7,<3",
  "pyyaml>=6.0",
  "typer[all]>=0.12",
  "rich>=13.7",
  "python-dateutil>=2.9",
  "psutil>=5.9",
  "watchdog>=4.0; platform_system != 'Windows'",  # for future fs sensor
  "httpx>=0.27",  # for local Ollama calls (purely optional, local only)
]

[project.scripts]
sofia = "aura_fusion.cli:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "mypy>=1.10",
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aura_fusion*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true
